--- a/public/views/layout.html
+++ b/public/views/layout.html
@@ -1,14 +1,23 @@
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
-    <div class="navbar-header" >
-      <a class="navbar-brand" ng-show="currentUser" ui-sref-opts="{reload: true}" ui-sref="home()">Folders {{folders_count}}</a>
-      <a class="navbar-brand" ng-show="currentUser.admin" ui-sref-opts="{reload: true}" ui-sref="users()">Users</a>
+    <div class="navbar-header" ng-show="currentUser">
+      <span class="navbar-brand">
+        SHIGOTO
+      </span>
+      <ul class="nav navbar-nav">
+        <li ui-sref-active="active">
+          <a  ui-sref-opts="{reload: true}" ui-sref="home()">Folders {{folders_count}}</a>
+        </li>
+        <li ui-sref-active="active">
+          <a ui-sref-opts="{reload: true}" ui-sref="users()">Users</a>
+        </li>
+      </ul>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right" ng-show="currentUser">
-        <li><a href="#" >{{ currentUser.audios.total_time }} | {{ currentUser.audios.translated }} | {{ currentUser.audios.reviewed }} </a></li>
-        <li><a href="#" >{{ currentUser.name }}</a></li>
         <li><a href="#" ng-click="signout()">Logout</a></li>
+        <li><span class="navbar-brand" href="#" >|</span></li>
+        <li><span class="navbar-brand" href="#" >{{ currentUser.name }}</span></li>
       </ul>
     </div><!--/.navbar-collapse -->
   </div>
