--- a/public/views/audios.html
+++ b/public/views/audios.html
@@ -35,6 +35,14 @@
       <div><em>ctrl+.</em> : <span style="color:#aaa">\period\</span></div> -->
       <div><em>ctrl+r</em> : <span style="color:#aaa">Re Play Audio</span></div>
     </p>
+    <div class="col-xs-12">
+      <form class="navbar-form navbar-left" role="search" method="get" target="_blank" action="https://www.google.com/search">
+        <div class="form-group">
+          <input type="text" class="form-control" name="q"　placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">検索する</button>
+      </form>
+    </div>
   </div>
 
   <div class="col-xs-12 col-md-9 pull-left">
