--- a/views/empty.erb
+++ b/views/empty.erb
@@ -26,6 +26,7 @@
     <script src="/javascripts/bower_components/lodash/lodash.js"></script>
     <script src="/javascripts/bower_components/restangular/dist/restangular.min.js"></script>
     <script src="/javascripts/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/javascripts/bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script src="/javascripts/init.js"></script>
 
     <script src="/javascripts/audios/audioItemDirective.js"></script>
