--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,9 +1,17 @@
 <div class="row">
 
-<div class="well well-sm">
+<div class="well well-sm" ng-show="currentUser.admin">
   <div class="btn-group" role="group" aria-label="...">
     <button type="button" ng-class="{'btn-default': !filterDownloaded, 'btn-success': filterDownloaded}" ng-click="toggleDowloadedFilter()">Downloaded</button>
+    <button type="button" ng-class="{'btn-default': !filterDownloaded, 'btn-success': filterDownloaded}" ng-click="toggleNeedsProcessingFilter()">Needs Processing</button>
   </div>
+    <div class="upload_file_form col-xs-6 pull-right">
+      <form action="/api/upload_folder" method="post" enctype="multipart/form-data">
+        <input type="submit" class="pull-right" value="Upload" name="submit">
+        <input type="file" accept="application/zip, application/octet-stream" class="pull-right" name="file" id="file_to_upload">
+      </form>
+    </div>
+
 </div>
 
   <div class="table-responsive">
