--- a/public/views/home.html
+++ b/public/views/home.html
@@ -34,7 +34,7 @@
             {{ folder.responsable.name }}</td>
           <td class="col-xs-4">
             <div>
-              <a class="btn btn-primary" ng-show="folderIsMine(folder)" style="float:left" ui-sref="folders({id: folder.id})" class="btn">{{ folder.name_short }}</a>
+              <a class="btn btn-primary" ng-show="folderIsMine(folder)" style="float:left" ui-sref="folders({id: folder.id})">{{ folder.name_short }}</a>
               <span ng-hide="folderIsMine(folder)">{{ folder.id }}</span>
               <span style="font-size: 0.8em; color: gray; padding: 5px 20px">{{ folder.created_at }}</span>
               <span style="float:right">[{{ folder.duration }}]</span>
@@ -60,8 +60,9 @@
               <a class="btn btn-primary" ui-sref="folders({id: folder.id})" class="btn">Edit</a>
             </span>
             <span ng-show="currentUser.admin">
-              <a class="btn btn-warning" ui-sref="folders_review({id: folder.id})" ng-show="folder.status == 'translated' || folder.status == 'reviewed'" class="btn">Review</a>
-              <a class="btn" ng-class="{btn: true, 'btn-default': folder.downloaded, 'btn-success': !folder.downloaded}" ng-show="folderReady(folder)" target="_blank" href="/api/audio_folders_dowload/{{ folder.id }}" class="btn" >Download</a>
+              <a class="btn btn-info" ng-show="folder.status == 'imported'" ng-click="processFiles(folder.id)">Process Files</a>
+              <a class="btn btn-warning" ui-sref="folders_review({id: folder.id})" ng-show="folder.status == 'translated' || folder.status == 'reviewed'">Review</a>
+              <a class="btn" ng-class="{btn: true, 'btn-default': folder.downloaded, 'btn-success': !folder.downloaded}" ng-show="folderReady(folder)" target="_blank" href="/api/audio_folders_dowload/{{ folder.id }}">Download</a>
             </span>
           </td>
         </tr>
