--- a/public/views/audios.html
+++ b/public/views/audios.html
@@ -1,12 +1,22 @@
+<div class="row" ng-if="review && currentUser.admin">
+  <div class="label label-success col-xs-12" style="font-size:1em;">Review</div>
+  <br />
+  <br />
+</div>
 <div class="row">
   <div class="col-xs-12 col-md-3 pull-right">
     <div class="label label-default col-xs-12" style="font-size:1em;">{{ folderInfo.name_short }}</div>
-    <br/>
-
     <div class="label label-default col-xs-12">
       <div class="progress">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ folderInfo.translated }}" aria-valuemin="0" aria-valuemax="{{ folderInfo.audios }}" style="width: {{ folderInfo.completed }}%">
           {{ folderInfo.completed }}%
+        </div>
+      </div>
+    </div>
+     <div class="label label-default col-xs-12" ng-if="review && currentUser.admin">
+      <div class="progress">
+        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="{{ folderInfo.translated }}" aria-valuemin="0" aria-valuemax="{{ folderInfo.audios }}" ng-if="folderInfo.audios > 0" style="width: {{ (folderInfo.reviewed * 100) / folderInfo.audios }}%">
+          {{ (folderInfo.reviewed * 100) / folderInfo.audios }}%
         </div>
       </div>
     </div>
@@ -48,7 +58,7 @@
   <div class="col-xs-12 col-md-9 pull-left">
     <div class="row all_audios" autofocus>
       <div class="col-md-6 audio" style="margin-bottom:3px" ng-repeat="audio in folder.audio_files track by $index">
-        <div class="row audio-item" id="{{ audio.id }}">
+        <div class="row audio-item" id="{{ audio.id }}" data-review="{{review}}">
           <audio class="col-xs-2" tabindex="0" controls >
             <source src="{{ audio.public_file }}" type="audio/wav">
             Your browser does not support the audio element.
@@ -67,7 +77,7 @@
   <nav>
     <ul class="pagination">
       <li>
-        <a aria-label="Previous" ng-click="prevPage()">
+        <a aria-label="Previous" ng-click="prevPage(review)">
           <span >&laquo;</span>
         </a>
       </li>
@@ -80,7 +90,7 @@
       </li>
 
       <li>
-        <a aria-label="Next" ng-click="nextPage()">
+        <a aria-label="Next" ng-click="nextPage(review)">
           <span >&raquo;</span>
         </a>
       </li>
