Show how many folders are in a batch

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -73,7 +73,7 @@
             </span>
             <br>
             <div ng-show="currentUser.admin">
-              {{ folder.batch.name }}
+              {{ folder.batch.name }} ({{ folder.batch.folders_count}})
             </div>
           </td>
         </tr>
