--- a/views/empty.erb
+++ b/views/empty.erb
@@ -42,6 +42,7 @@
 
     <script src="/javascripts/users/usersController.js"></script>
     <script src="/javascripts/users/userService.js"></script>
+    <script src="/javascripts/invoices/invoicesController.js"></script>
 
     <script src="/javascripts/app.js"></script>
   </body>
