Fix download invoice button

--- a/public/views/invoices.html
+++ b/public/views/invoices.html
@@ -24,7 +24,7 @@
             <td>{{ invoice.reviewed }}</td>
             <td>{{ invoice.total }}</td>
             <td>{{ invoice.total_amount }}</td>
-            <td><a class="btn btn-primary" style="float:left" href="/api/invoices/{{ invoice.id }}/download">Download</a></td>
+            <td><a class="btn btn-primary" target="_blank" style="float:left" href="/api/invoices/{{ invoice.id }}/download">Download</a></td>
           </tr>
         </tbody>
       </table>
